# AgentMeeMaw

./: .dockerignore  .env.example  .gitignore  0001_initial_schema.up.sql  0002_seed_starter_questions.up.sql  API.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LEGACY_MODE_BRIEF.md  NODE_INTEGRATION.md  QUESTION_BANK.md  README-step-1.md  README-step-10.md  README-step-11.md  README-step-12.md  README-step-13.md  README-step-14.md  README-step-15.md  README-step-16.md  README-step-2.md  README-step-3.md  README-step-4.md  README-step-5.md  README-step-6.md  README-step-7.md  README-step-8.md  README-step-9.md  README.md  SCHEMA.md  docker-compose.local.yml  pyproject.toml
.claude/: settings.local.json
docs/: ec2-deploy.md  initial-deployment.md  local-dev.md
migrations/: 0001_initial_schema.down.sql  0002_seed_starter_questions.down.sql  0003_extraction_worker_support.down.sql  0003_extraction_worker_support.up.sql  0004_thread_detector_support.down.sql  0004_thread_detector_support.up.sql  0005_trait_synthesizer_support.down.sql  0005_trait_synthesizer_support.up.sql  0006_profile_summary_support.down.sql  0006_profile_summary_support.up.sql  0007_question_producers_support.down.sql  0007_question_producers_support.up.sql  0008_replace_starter_questions.down.sql  0008_replace_starter_questions.up.sql  0009_add_persons_gender.down.sql  0009_add_persons_gender.up.sql  0010_profile_facts.down.sql  0010_profile_facts.up.sql  0011_replace_starter_questions_v2.down.sql  0011_replace_starter_questions_v2.up.sql  0012_identity_merge_suggestions.down.sql  0012_identity_merge_suggestions.up.sql  0013_identity_merge_scanner_source.down.sql  0013_identity_merge_scanner_source.up.sql  0014_extraction_outbox.down.sql  0014_extraction_outbox.up.sql  0015_llm_provenance.down.sql  0015_llm_provenance.up.sql  0016_replace_starter_questions_v3.down.sql  0016_replace_starter_questions_v3.up.sql  0017_archetype_onboarding_scope_expansion.down.sql  0017_archetype_onboarding_scope_expansion.up.sql  0018_person_onboarding_state.down.sql  0018_person_onboarding_state.up.sql  0019_rename_starter_anchor_to_coverage_tap.down.sql  0019_rename_starter_anchor_to_coverage_tap.up.sql  0020_themes.down.sql  0020_themes.up.sql
scripts/: migrate.py  start-local.ps1
scripts/localstack/: init-sqs.sh
src/: sitecustomize.py
src/flashback/: __init__.py  config.py  env.py
tests/: conftest.py  test_env.py
tests/db/: test_edges_extension.py  test_edges_themed_as.py
tests/http/: conftest.py  test_admin.py  test_auth.py  test_health.py  test_onboarding.py  test_persons.py  test_session.py  test_turn.py
tests/identity_merges/: test_repository.py  test_scanner.py
tests/intent_classifier/: __init__.py  test_classifier.py  test_prompts.py
tests/llm/: __init__.py  test_call_text.py  test_clients.py  (+2 more)
(+324 files in other folders)
